Actualizando contenido y menú

--- a/content/en/publication/tfg-naujoel/cite.bib
+++ b/content/en/publication/tfg-naujoel/cite.bib
@@ -1,5 +1,5 @@
-@inproceedings{fdp1,
-  title={Final Degree Project},
+@thesis{fdp1,
+  title={Evolution of inheritance and donation tax},
   author={Naujoël},
   booktitle={Tax Law},
   pages={1--35},
