--- a/content/es/publication/tfg-naujoel/cite.bib
+++ b/content/es/publication/tfg-naujoel/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{tfg1,
-  title={Trabajo Fin de Grado en Derecho},
+  title={Evolución del Impuesto de Sucesiones y Donaciones},
   author={Naujoël},
-  booktitle={Impuesto de Sucesiones y Donaciones},
+  booktitle={Derecho Tributario},
   pages={1--35},
   year={2018},
   organization={UNED}
